@@ -1,6 +1,7 @@
 hildondesktopconf_DATA = \
 	home.conf		\
 	home.plugins		\
+	home-w50.plugins	\
 	notification.conf	\
 	notification-groups.conf
 
