@@ -2,4 +2,4 @@
 X-Plugin-Dir=@hildonhomedesktopentrydir@
 X-Load-New-Plugins=true
 X-Load-All-Plugins=false
-X-Plugin-Configuration=home.plugins
+X-Plugin-Configuration=home-w50.plugins
