@@ -1,2 +1,0 @@
-[example-label-applet.desktop]
-X-Desktop-File=@hildonhomedesktopentrydir@/example-label-applet.desktop
